[package]
description = "Parity RabbitMQ client"
name = "parity-rabbitmq"
version = "0.1.0"

[dependencies]
failure = "0.1"
futures = "0.1.6"
hex = "0.3.2"
hyper = "0.12"
lapin-futures = "0.15.0"
lazy_static = "1.4"
log = "0.4"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.19"

enclose = "0.1.4"
ethcore = { path = "../ethcore", features = ["test-helpers"] }
ethcore-miner = { path = "../miner" }
common-types = { path = "../ethcore/types" }
ethereum-types = "0.4"
futures-executor = "0.2.1"
parity-runtime = { path = "../util/runtime" }
rabbitmq_adaptor = {version = "0.3.3", registry = "chronicled-platform-v2"}
rlp = { version = "0.3.0", features = ["ethereum"] }

[dev-dependencies]
macros = { path = "../util/macros" }

[dependencies.prometheus]
git = "https://github.com/pingcap/rust-prometheus.git"
features = ["push", "process"]
