[package]
description = "Parity RabbitMQ client"
name = "parity-rabbitmq"
version = "0.1.0"

[dependencies]
boolinator = "2.4.0"
byteorder = "1.0"
failure = "0.1.6"
futures = "0.1.6"
hex = "0.3.2"
hyper = "0.12"
lapin-futures = { version = "0.28.3", registry = "chronicled-platform-v2-public" }
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.7"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.19"
kvdb = "0.1"
kvdb-rocksdb = "0.1.3"
enclose = "0.1.4"
ethcore = { path = "../ethcore", features = ["test-helpers"] }
ethcore-miner = { path = "../miner" }
ethcore-network = { path = "../util/network" }
ethcore-sync = { path = "../ethcore/sync" }
common-types = { path = "../ethcore/types" }
ethereum-types = "0.4"
futures-executor = "0.2.1"
parity-runtime = { path = "../util/runtime" }
rabbitmq_adaptor = { version = "0.4.5", registry = "chronicled-platform-v2-public" }
rlp = { version = "0.3.0", features = ["ethereum"] }
vm = { path = "../ethcore/vm" }

[dev-dependencies]
kvdb-memorydb = "0.1"
macros = { path = "../util/macros" }

[dependencies.prometheus]
git = "https://github.com/pingcap/rust-prometheus.git"
features = ["process"]
